--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
+    "emoji-picker-react": "^3.4.8",
     "firebase": "^7.20.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
