--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "clsx": "^1.1.1",
     "emoji-picker-react": "^3.4.8",
     "firebase": "^7.20.0",
+    "i18next": "^21.0.1",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^2.2.0",
+    "react-i18next": "^11.12.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
