--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next": "^21.0.1",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
+    "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
