--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-desktop-notification": "^1.0.9",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^2.2.0",
     "react-i18next": "^11.12.0",
