--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-desktop-notification": "^1.0.9",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-firebase-hooks": "^2.2.0",
     "react-i18next": "^11.12.0",
     "react-redux": "^7.2.5",
